bin_PROGRAMS        = client server getaddresses echo_client_udp echo_server_udp tcp_client daytime_server_tcp discard_server_tcp echo_server_tcp chargen_server_tcp
client_SOURCES = client.c
server_SOURCES = server.c helper.c chargen.c daytime.c discard.c echo.c
getaddresses_SOURCES = getaddresses.c
echo_client_udp_SOURCES = echo_client_udp.c Socket.c
echo_server_udp_SOURCES = echo_server_udp.c Socket.c
tcp_client_SOURCES = tcp_client.c Socket.c
daytime_server_tcp_SOURCES = daytime_server_tcp.c Socket.c
discard_server_tcp_SOURCES = discard_server_tcp.c Socket.c
echo_server_tcp_SOURCES = echo_server_tcp.c Socket.c
chargen_server_tcp_SOURCES = chargen_server_tcp.c Socket.c